--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,12 @@
         }
     },
     "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "modules": false
+            }
+        ],
         "@babel/preset-react"
     ],
     "plugins": [
