--- a/package.json
+++ b/package.json
@@ -14,9 +14,65 @@
         "type": "git"
     },
     "dependencies": {
-        "@amjs/vue-tools": "^1.1.1",
+        "@babel/core": "^7.11.6",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+        "@babel/plugin-transform-runtime": "^7.11.5",
+        "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.12.1",
+        "@babel/runtime": "^7.11.2",
+        "autoprefixer": "^9.8.6",
+        "babel-eslint": "^10.1.0",
+        "babel-jest": "^24.8.0",
+        "babel-loader": "^8.1.0",
+        "babel-plugin-istanbul": "^5.1.0",
+        "babel-template": "^6.26.0",
+        "chalk": "^2.4.2",
+        "chromedriver": "^85.0.1",
+        "compression-webpack-plugin": "^5.0.2",
+        "copy-webpack-plugin": "^5.1.2",
+        "css-loader": "^2.1.0",
+        "eslint": "^6.8.0",
+        "eslint-friendly-formatter": "^4.0.1",
+        "eslint-loader": "^2.2.1",
+        "eslint-plugin-vue": "^5.1.0",
+        "friendly-errors-webpack-plugin": "^1.7.0",
+        "html-webpack-plugin": "^3.2.0",
+        "jest": "^24.8.0",
+        "jest-serializer-vue": "^2.0.2",
+        "js-yaml": "^3.14.0",
+        "jsdom": "^13.2.0",
+        "lint-staged": "^9.5.0",
+        "mini-css-extract-plugin": "^0.7.0",
+        "nightwatch": "^1.4.1",
+        "node-env-tools": "^1.0.2",
+        "node-sass": "^4.14.1",
+        "optimize-css-assets-webpack-plugin": "^5.0.4",
+        "ora": "^3.4.0",
+        "portfinder": "^1.0.28",
+        "postcss": "^7.0.32",
+        "postcss-assets": "^5.0.0",
+        "postcss-import": "^12.0.1",
+        "postcss-loader": "^3.0.0",
+        "postcss-url": "^8.0.0",
+        "prettier": "^1.19.1",
+        "pug": "^2.0.4",
+        "pug-plain-loader": "^1.0.0",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "rimraf": "^2.6.3",
+        "sass-lint": "^1.12.1",
+        "sass-loader": "^7.1.0",
+        "selenium-server": "^3.141.59",
+        "semver": "^5.6.0",
+        "style-loader": "^0.23.1",
+        "terser-webpack-plugin": "^1.4.5",
+        "text-table": "^0.2.0",
+        "url-loader": "^2.3.0",
+        "webpack": "^4.44.1",
+        "webpack-bundle-analyzer": "^3.8.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^4.2.1"
     }
 }
