--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "terser-webpack-plugin": "^1.4.5",
         "text-table": "^0.2.0",
         "url-loader": "^2.3.0",
+        "watchpack-chokidar2": "^2.0.0",
         "webpack": "^4.44.1",
         "webpack-bundle-analyzer": "^3.8.0",
         "webpack-cli": "^3.3.12",
