[chore] *: added react eslint plugin

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,7 +5,7 @@ env:
 
 extends:
     - eslint:recommended
-    - plugin:vue/strongly-recommended
+    - plugin:react/recommended
 
 globals:
     require: true
