--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "eslint": "^6.8.0",
         "eslint-friendly-formatter": "^4.0.1",
         "eslint-loader": "^2.2.1",
+        "eslint-plugin-react": "^7.21.5",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "html-webpack-plugin": "^3.2.0",
         "jest": "^24.8.0",
