--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "prettier": "^1.19.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-test-renderer": "^17.0.1",
         "rimraf": "^2.6.3",
         "sass-lint": "^1.12.1",
         "sass-loader": "^7.1.0",
